[package]
name = "task-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["cargo", "derive"] }
sysinfo = "0.30.5"
serde_json = "1.0"
chrono = "0.4.33"
regex = "1.10.3"
rustix = {version = "0.38.31", features = ["process"]}
ctrlc = "3.4.2"
libc = "0.2.153"
tar = "0.4.40"


